--- a/trunk/akshay gupta/Dashboard.html
+++ b/trunk/akshay gupta/Dashboard.html
@@ -11,6 +11,7 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<script src="js/jquery-1.5.2.min.js" type="text/javascript"></script>
+    <script src="bannerRotate.js" type="text/javascript"></script>
 	<script src="js/hideshow.js" type="text/javascript"></script>
 	<script src="js/jquery.tablesorter.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/jquery.equalHeight.js"></script>
@@ -87,26 +88,26 @@
 			<input type="text" value="Quick Search" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
 		</form>
 		<hr/>
-		<h3>Content</h3>
+		<h3>Navigator</h3>
 		<ul class="toggle">
         <li class="icn_tags"><a href="Dashboard.html">DashBoard</a></li>
-			<li class="icn_new_article"><!--<a id="overlay" href="equip_purchase.htm">New Request</a>--><a class="lightbox-22643568634460" style="cursor:pointer;color:#666;">New Request</a></li>
-			<li class="icn_edit_article"><a href="Archive.html">Request Archive</a></li>
+			
+			
 			
 			<li class="icn_tags"><a href="Notifications.html">Notifications</a></li>
-		</ul>
-		<h3>Tools</h3>
+	
+		  <li class="icn_add_user"><a href="Request Tracker.html">Request Tracker</a></li>
+          <li class="icn_edit_article"><a href="Purchase History.html" >Purchase History</a></li>
+	  </ul>
+		<h3>Request Menu</h3>
 		<ul class="toggle">
-			<li class="icn_add_user"><a href="Request Tracker.html">Request Tracker</a></li>
-			
-		</ul>
-		<h3>Request status</h3>
-		<ul class="toggle">
+        <li class="icn_new_article"><!--<a id="overlay" href="equip_purchase.htm">New Request</a>--><a class="lightbox-22643568634460" style="cursor:pointer;color:#666;">New Request</a></li>
 			<li class="icn_folder"><a href="Approved.html">Approved</a></li>
-			<li class="icn_photo"><a href="#">Rejected</a></li>
-			<li class="icn_audio"><a href="#">OnGoing</a></li>
-			<li class="icn_video"><a href="#">Drafts</a></li>
-		</ul>
+			<li class="icn_photo"><a href="Rejected.html">Rejected</a></li>
+			<li class="icn_audio"><a href="Ongoing.html">OnGoing</a></li>
+            <li class="icn_photo"><a href="Pending.html" >Pending</a></li>
+			
+	  </ul>
 		<h3>AdminISTRATION</h3>
 		<ul class="toggle">
 			<li class="icn_settings"><a href="Profile.html">Profile</a></li>
