--- a/trunk/akshay gupta/Profile.html
+++ b/trunk/akshay gupta/Profile.html
@@ -64,6 +64,7 @@ function zoom() {
 			<h2 class="section_title">Profile</h2><div class="btn_view_site"></div>
 		</hgroup>
 	</header> <!-- end of header bar -->
+	 <!-- end of header bar -->
 	
 	<section id="secondary_bar">
 		<div class="user">
@@ -75,42 +76,38 @@ function zoom() {
 			  <div class="breadcrumb_divider"></div> <a class="current">Profile</a></article>
 		</div>
 	</section><!-- end of secondary bar -->
-	
 	<aside id="sidebar" class="column">
-		<form class="quick_search">
-			<input type="text" value="Quick Search" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
-		</form>
-		<hr/>
-		<h3>Content</h3>
-		<ul class="toggle">
-        <li class="icn_tags"><a href="Dashboard.html">DashBoard</a></li>
-			<li class="icn_new_article"><a class="lightbox-22643568634460" style="cursor:pointer;color:#666;">New Request</a></li>
-			<li class="icn_edit_article"><a href="#">Edit Request</a></li>
-			
-			<li class="icn_tags"><a href="Notifications.html">Notifications</a></li>
-		</ul>
-		<h3>Tools</h3>
-		<ul class="toggle">
-			<li class="icn_add_user"><a href="#">Request Tracker</a></li>
-			
-		</ul>
-		<h3>Requests status</h3>
-		<ul class="toggle">
-			<li class="icn_folder"><a href="Approved.html">Approved</a></li>
-			<li class="icn_photo"><a href="#">Rejected</a></li>
-			<li class="icn_audio"><a href="#">Ongoing</a></li>
-			<li class="icn_video"><a href="#">Drafts</a></li>
-		</ul>
-		<h3>Administration</h3>
-		<ul class="toggle">
-			<li class="icn_settings"><a href="#">Profile</a></li>
-			<li class="icn_jump_back"><a href="#">Logout</a></li>
-		</ul>
-		
-		<footer>
-			<hr />
-		</footer>
-	</aside><!-- end of sidebar -->
+	  <form class="quick_search">
+	    <input type="text" value="Quick Search" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
+      </form>
+	  <hr/>
+	  <h3>Navigator</h3>
+	  <ul class="toggle">
+	    <li class="icn_tags"><a href="Dashboard.html">DashBoard</a></li>
+	    <li class="icn_tags"><a href="Notifications.html">Notifications</a></li>
+	    <li class="icn_add_user"><a href="Request Tracker.html">Request Tracker</a></li>
+	    <li class="icn_edit_article"><a href="Purchase History.html" >Purchase History</a></li>
+      </ul>
+	  <h3>Request Menu</h3>
+	  <ul class="toggle">
+	    <li class="icn_new_article">
+	      <!--<a id="overlay" href="equip_purchase.htm">New Request</a>-->
+	      <a class="lightbox-22643568634460" style="cursor:pointer;color:#666;">New Request</a></li>
+	    <li class="icn_folder"><a href="Approved.html">Approved</a></li>
+	    <li class="icn_photo"><a href="Rejected.html">Rejected</a></li>
+	    <li class="icn_audio"><a href="Ongoing.html">OnGoing</a></li>
+	    <li class="icn_photo"><a href="Pending.html" >Pending</a></li>
+      </ul>
+	  <h3>AdminISTRATION</h3>
+	  <ul class="toggle">
+	    <li class="icn_settings"><a href="Profile.html">Profile</a></li>
+	    <li class="icn_jump_back"><a href="Login.html">Logout</a></li>
+      </ul>
+	  <footer>
+	    <hr />
+      </footer>
+</aside>
+	<!-- end of sidebar -->
 	
 	<section id="main" class="column">
 	  <h4 class="alert_info">Welcome to Equip-Me</h4>
